# mariadb

./: CMakeLists.txt  CMakeLists_main.txt  README.md
include/: mariadb.hpp  mariadbdetail.hpp  mariadbimpl.hpp  query.hpp  result.hpp
include/hemirt/: mariadb.hpp  mariadbdetail.hpp  mariadbimpl.hpp  query.hpp  result.hpp
src/: main.cpp  mariadb.cpp  mariadbimpl.cpp  result.cpp
